tests/baselines/reference/ClassDeclaration11.errors.txt
==== tests/cases/compiler/ClassDeclaration11.ts (1 errors) ====
    class C {
       constructor();
       ~~~~~~~~~~~~~~
!!! error TS2390: Constructor implementation is missing.
       foo() { }
    }